Fix Bug 299289 - "Replace smileys by emoticons" causes another message

to be displayed
It was a bug when we saved aggregation combobox it reloaded config
=> reload last selected item.
Now save it before when we apply config so it avoid to select last saved
item.

FIXED-IN: 4.8.4
BUG: 299289
(cherry picked from commit c7814acf9c67b1c7840401eb7e9949edffb7569e)

Conflicts:

	kmail/kmmainwidget.cpp
	messagelist/core/widgetbase.h