kmail/kmkernel.cpp
@@ -1899,4 +1899,12 @@ void KMKernel::slotInstanceRemoved(const Akonadi::AgentInstance& instance)
   }
 }
 
+void KMKernel::savePaneSelection()
+{
+  KMMainWidget *widget = getKMMainWidget();
+  if ( widget  ) {
+    widget->savePaneSelection();
+  }
+}
+
 #include "kmkernel.moc"
