kmail/kmmainwidget.h
@@ -190,6 +190,7 @@ class KMAIL_EXPORT KMMainWidget : public QWidget
     KMail::FolderShortcutActionManager *folderShortcutActionManager() const {
       return mFolderShortcutActionManager;
     }
+    void savePaneSelection();
 
   public slots:
     // Moving messages around
